# BabelDOC

./: pyproject.toml
.github/workflows/: publish-to-pypi.yml
