[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "babeldoc"
version = "0.1.0"
description = "A document translation tool — Fork of funstory-ai/BabelDOC"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
keywords = ["pdf", "translation", "document", "nlp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Utilities",
]
dependencies = [
    "pdfminer.six>=20221105",
    "reportlab>=4.0.0",
    "requests>=2.31.0",
    "httpx>=0.27.0",
    "tenacity>=8.2.0",
    "tqdm>=4.66.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "pymupdf>=1.23.0",
    "openai>=1.0.0",
    "tiktoken>=0.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]

[project.urls]
Homepage = "https://github.com/YOUR_USERNAME/BabelDOC"
Repository = "https://github.com/YOUR_USERNAME/BabelDOC"
Issues = "https://github.com/YOUR_USERNAME/BabelDOC/issues"
Changelog = "https://github.com/YOUR_USERNAME/BabelDOC/releases"

[project.scripts]
babeldoc = "babeldoc.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["babeldoc"]

[tool.ruff]
line-length = 88  # personal preference: match black's default
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["babeldoc"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
# Removed --cov flags so a plain `pytest` run doesn't require pytest-cov
# -p no:warnings keeps output clean during local dev
addopts = "-v -p no:warnings"

[tool.coverage.run]
source = ["babeldoc"]
omit = ["tests/*"]

[tool.coverage.report]
# Show lines that are missing coverage in the terminal report
show_missing = true
# Only report files with less than 100% coverage
skip_covered = false
# Personal preference: ignore files below 80% coverage threshold in CI
fail_under = 80
